Kubernetes/definitionfiles/pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: myapp
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      resources:
        requests:
          cpu: "500m"
          memory: "250m"
        limits:
          cpu: "850m"
          memory: "500m"
